xray-demo/kafka/resources/kafdrop/kafdrop-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafdrop
  namespace: xray-demo
spec:
  selector:
    app: kafdrop
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
